// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateContactComp > render > should render clearing the value 1`] = `
<div>
  Clear
   
  <span
    className="emphasize"
  >
    Age
  </span>
  .
</div>
`;

exports[`UpdateContactComp > render > should render set channel 1`] = `
<div
  className="_node_asset_9658e1"
>
  Set
   
  channel
   
  to
   
  <span
    className="emphasize"
  >
    Twilio Channel
  </span>
  .
</div>
`;

exports[`UpdateContactComp > render > should render set field 1`] = `
<div
  className="_node_asset_9658e1"
>
  Set
   
  <span
    className="emphasize"
  >
    Age
  </span>
   
  to
   
  <span
    className="emphasize"
  >
    25
  </span>
  .
</div>
`;

exports[`UpdateContactComp > render > should render set language 1`] = `
<div
  className="_node_asset_9658e1"
>
  Set
   
  language
   
  to
   
  <span
    className="emphasize"
  >
    eng
  </span>
  .
</div>
`;

exports[`UpdateContactComp > render > should render set name 1`] = `
<div
  className="_node_asset_9658e1"
>
  Set
   
  name
   
  to
   
  <span
    className="emphasize"
  >
    Jane Goodall
  </span>
  .
</div>
`;

exports[`UpdateContactComp > render > should render set status 1`] = `
<div
  className="_node_asset_9658e1"
>
  Set
   
  status
   
  to
   
  <span
    className="emphasize"
  >
    blocked
  </span>
  .
</div>
`;
